--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,59 @@
     transform: rotate(360deg);
   }
 }
+:root {
+  --color-menu-bg: #fff;
+  --font-color-mi: #000;
+  --font-color-mi-hover: #1890ff;
+  --color-bg-mi-hover: #ececec;
+  --border-radius-mi: 2px;
+  --transition-menu-time: 0.2s;
+  --color-line-bg: #d3d3d3;
+}
+
+.back{
+  top: 5%;
+  margin-left: 4%;
+  width: 90%;
+  height: 60%;
+  box-shadow: 0px 0px 5px 0px #000;overflow-y: auto;display: block;
+  border-radius: 0.25rem;
+  overflow: hidden;
+}
+
+.selectList{
+  width: 100%;
+}
+
+.selectList::-webkit-scrollbar{
+  width: 0;
+}
+
+.selectList .thead{    
+  width: 100%;
+}
+
+.selectList .thead .item{
+  text-align: center;
+}
+
+.selectListBody{
+  table-layout: fixed;
+}
+
+.selectListBody .item{
+  margin-top: 5px;
+  text-align: center;
+}
+
+
+.selectListBody .item:hover{
+  background-color: var(--color-bg-mi-hover);
+  color: var(--font-color-mi-hover);
+}
+
+.selectListBody .item>td{
+  -moz-user-select:none;
+  -webkit-user-select:none;
+  user-select:none;  
+}
